PHCR-757: Fix tooltip z-index value in reports page
When the setting modal is open, the tooltips appear above it. Fixing their z-index value solves the issue

--- a/org.civicrm.bootstrapcivihr/scss/pages/reports.scss
+++ b/org.civicrm.bootstrapcivihr/scss/pages/reports.scss
@@ -78,6 +78,10 @@
             border-radius: 0;
             height: 5px;
 
+            .tooltip {
+                z-index: 1000;
+            }
+
             .tooltip-arrow {
                 border-bottom-color: #dee7e8;
             }
